# mlops_project_classification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
ai_detector/: dataset.py  model.py  trainer.py
config/: config.yaml
config/data/: default.yaml
config/model/: basic_nn.yaml
config/trainer/: default.yaml
mlops_project/mlcore/: dataset.py  model.py  testme.py  trainer.py  utils.py
